QA-15289: Update jahia-dashboard to 1.11.0-SNAPSHOT (#761)
Bump version of jahia-dashboard module to 1.11.0-SNAPSHOT (from 1.10.0)

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-dashboard</artifactId>
-            <version>1.10.0</version>
+            <version>1.11.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
