BACKLOG-23366: Migrate from npm-modules-engine to javascript-modules-engine (#770)
Migrate dependency from org.jahia.modules:npm-modules-engine to org.jahia.modules:javascript-modules-engine

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -344,8 +344,8 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
-            <artifactId>npm-modules-engine</artifactId>
-            <version>0.6.0-SNAPSHOT</version>
+            <artifactId>javascript-modules-engine</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
