--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -74,6 +74,11 @@ jobs:
       current_branch: ${{ steps.tags.outputs.current_branch }}
       triggered_by: ${{ steps.tags.outputs.triggered_by }}
     steps:
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4.6.0
+        with:
+          java-version: 11
+          distribution: temurin
       - uses: actions/checkout@v4
         with:
           ref: ${{ needs.vars.outputs.target_branch }}
