--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
+            <version>3.2.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -254,7 +254,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>9.10.0-SNAPSHOT</version>
+            <version>9.10.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
