BACKLOG-23587 : release jahia-dashboard 1.11.0 and jahia-dashboard-docs 1.4.0 (#800)

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -116,13 +116,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-dashboard</artifactId>
-            <version>1.11.0-SNAPSHOT</version>
+            <version>1.11.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-dashboard-docs</artifactId>
-            <version>1.4.0-SNAPSHOT</version>
+            <version>1.4.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
