--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -260,7 +260,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>8.9.0-SNAPSHOT</version>
+            <version>8.9.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
