--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -298,7 +298,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>5.1.0</version>
+            <version>5.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
