--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-page-composer</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -298,7 +298,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>5.1.2-SNAPSHOT</version>
+            <version>5.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
