--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>luxe-prepackaged-website</artifactId>
-            <version>0.2.0</version>
+            <version>0.3.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
