--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -304,7 +304,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>8.6.0</version>
+            <version>8.7.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
