--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -310,7 +310,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>visibility</artifactId>
-            <version>9.0.0-SNAPSHOT</version>
+            <version>8.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
