--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -47,12 +47,12 @@
     <parent>
         <groupId>org.jahia.packages</groupId>
         <artifactId>jahia-packages-parent</artifactId>
-        <version>8.2.1.0</version>
+        <version>8.2.1.1-SNAPSHOT</version>
         <relativePath />
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-additional-modules</artifactId>
-  <version>8.2.1.0</version>
+  <version>8.2.1.1-SNAPSHOT</version>
     <name>Jahia Additional Modules Package</name>
     <packaging>pom</packaging>
 
@@ -94,8 +94,4 @@
             <version>0.2.0</version>
         </dependency>
     </dependencies>
-
-  <scm>
-    <tag>JAHIA_8_2_1_0</tag>
-  </scm>
 </project>
