--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -48,12 +48,12 @@
     <parent>
         <groupId>org.jahia.packages</groupId>
         <artifactId>jahia-packages-parent</artifactId>
-        <version>8.2.1.0</version>
+        <version>8.2.1.1-SNAPSHOT</version>
         <relativePath />
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
-  <version>8.2.1.0</version>
+  <version>8.2.1.1-SNAPSHOT</version>
     <name>Jahia Core Modules Package</name>
     <packaging>pom</packaging>
 
@@ -353,8 +353,4 @@
             <version>1.0.0</version>
         </dependency>
     </dependencies>
-
-  <scm>
-    <tag>JAHIA_8_2_1_0</tag>
-  </scm>
 </project>
