--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-ui-root</artifactId>
-            <version>1.10.0</version>
+            <version>1.11.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-page-composer</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
