--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -181,6 +181,11 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>external-provider-vfs</artifactId>
+            <version>4.9.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>facets</artifactId>
             <version>8.1.0</version>
             <scope>runtime</scope>
