--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -76,12 +76,13 @@
     </repositories>
 
     <dependencies>
+        <!-- Uncomment the following dependencies when we have a stable release version of the CKEditor 5
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>richtext-ckeditor5</artifactId>
             <version>0.1.0</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.jahia.modules.npm</groupId>
             <artifactId>luxe-jahia-demo</artifactId>
