--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -84,15 +84,15 @@
             <scope>runtime</scope>
         </dependency>-->
         <dependency>
-            <groupId>org.jahia.modules.npm</groupId>
+            <groupId>org.jahia.modules.javascript</groupId>
             <artifactId>luxe-jahia-demo</artifactId>
-            <version>0.4.1</version>
+            <version>0.8.0-SNAPSHOT</version>
             <type>tgz</type>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>luxe-prepackaged-website</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>0.8.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
