--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -48,12 +48,12 @@
     <parent>
         <groupId>org.jahia.packages</groupId>
         <artifactId>jahia-packages-parent</artifactId>
-        <version>8.1.8.4</version>
+        <version>8.1.9.0-SNAPSHOT</version>
         <relativePath />
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
-  <version>8.1.8.4</version>
+  <version>8.1.9.0-SNAPSHOT</version>
     <name>Jahia Core Modules Package</name>
     <packaging>pom</packaging>
 
