--- a/docker-jahia/pom.xml
+++ b/docker-jahia/pom.xml
@@ -2,11 +2,11 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>docker-distribution-parent</artifactId>
-        <version>8.1.8.4</version>
+        <version>8.1.9.0-SNAPSHOT</version>
         <relativePath />
     </parent>
     <artifactId>docker-jahia</artifactId>
-  <version>8.1.8.4</version>
+  <version>8.1.9.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>pom</packaging>
