--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-administration</artifactId>
-            <version>1.11.0</version>
+            <version>1.12.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
