chore: bump personal-api-tokens from 1.6.0-SNAPSHOT to 1.6.0 (#905)

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -334,7 +334,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>personal-api-tokens</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <version>1.6.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
