--- a/docker-jahia/Dockerfile
+++ b/docker-jahia/Dockerfile
@@ -1,7 +1,8 @@
+ARG IMAGE_REGISTRY
 ARG IMAGE_REPO_CLASSIFIER
 ARG PARENT_TAG
 
-FROM jahia/jahia-core${IMAGE_REPO_CLASSIFIER}:${PARENT_TAG}
+FROM ${IMAGE_REGISTRY}jahia/jahia-core${IMAGE_REPO_CLASSIFIER}:${PARENT_TAG}
 
 ARG PROJECT_VERSION
 ARG C_USER="tomcat"
