--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -112,8 +112,8 @@ jobs:
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.GH_PACKAGES_USERNAME }}
+          password: ${{ secrets.GH_PACKAGES_TOKEN }}
       - name: Store project version
         shell: bash
         run: |
