--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -181,12 +181,12 @@ jobs:
         with:
           src_registry: github
           src_repository: jahia/jahia-opencore-dev
-          src_username: ${{ github.actor }}
-          src_secret: ${{ secrets.GITHUB_TOKEN }}
+          src_username: ${{ secrets.GH_PACKAGES_USERNAME }}
+          src_secret: ${{ secrets.GH_PACKAGES_TOKEN }}
           dst_registry: github
           dst_repository: jahia/jahia-opencore-dev
-          dst_username: ${{ github.actor }}
-          dst_secret: ${{ secrets.GITHUB_TOKEN }}
+          dst_username: ${{ secrets.GH_PACKAGES_USERNAME }}
+          dst_secret: ${{ secrets.GH_PACKAGES_TOKEN }}
           dry_run: false
 
       # Series of steps only executed when in a PR
