ci: fix the generation of shorthand tags for the docker images (#914)

--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -187,6 +187,7 @@ jobs:
           dst_repository: jahia/jahia-opencore-dev
           dst_username: ${{ secrets.GH_PACKAGES_USERNAME }}
           dst_secret: ${{ secrets.GH_PACKAGES_TOKEN }}
+          version_digits_count: 4
           dry_run: false
 
       # Series of steps only executed when in a PR
