--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -86,13 +86,13 @@
         <dependency>
             <groupId>org.jahia.modules.javascript</groupId>
             <artifactId>luxe-jahia-demo</artifactId>
-            <version>0.10.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <type>tgz</type>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>luxe-prepackaged-website</artifactId>
-            <version>0.10.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
