--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -134,7 +134,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcontent</artifactId>
-            <version>3.4.1</version>
+            <version>3.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
