build: Allow creation of Docker images with the default registry (#935)

--- a/docker-jahia/Dockerfile
+++ b/docker-jahia/Dockerfile
@@ -1,8 +1,6 @@
-ARG IMAGE_REGISTRY
-ARG IMAGE_REPO_CLASSIFIER
-ARG PARENT_TAG
+ARG BASE_IMAGE
 
-FROM ${IMAGE_REGISTRY}jahia/jahia-core${IMAGE_REPO_CLASSIFIER}:${PARENT_TAG}
+FROM ${BASE_IMAGE}
 
 ARG PROJECT_VERSION
 ARG C_USER="tomcat"
