--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>3.5.1-SNAPSHOT</version>
+            <version>3.5.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
