--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-dashboard</artifactId>
-            <version>1.12.0-SNAPSHOT</version>
+            <version>1.12.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
