--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -206,7 +206,7 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>3.3.0-SNAPSHOT</version>
+            <version>3.3.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
