--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.21.0-jahia8-7</version>
+            <version>4.21.0-jahia8-8-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
