--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -52,7 +52,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-additional-modules</artifactId>
-  <version>8.2.4.0-SNAPSHOT</version>
+  <version>8.2.3.1-SNAPSHOT</version>
     <name>Jahia Additional Modules Package</name>
     <packaging>pom</packaging>
 
@@ -94,4 +94,8 @@
             <version>1.0.1</version>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>JAHIA-8-2-3-X-BRANCH</tag>
+  </scm>
 </project>
