--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -53,7 +53,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
-  <version>8.2.4.0-SNAPSHOT</version>
+  <version>8.2.3.1-SNAPSHOT</version>
     <name>Jahia Core Modules Package</name>
     <packaging>pom</packaging>
 
@@ -353,4 +353,8 @@
             <version>1.0.0</version>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>JAHIA-8-2-3-X-BRANCH</tag>
+  </scm>
 </project>
