--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-root</artifactId>
-    <version>8.2.3.1-SNAPSHOT</version>
+    <version>8.2.4.0-SNAPSHOT</version>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
     <packaging>pom</packaging>
@@ -64,7 +64,7 @@
         <connection>scm:git:git@github.com:Jahia/jahia-pack-private.git</connection>
         <developerConnection>scm:git:git@github.com:Jahia/jahia-pack-private.git</developerConnection>
         <url>https://github.com/Jahia/jahia-pack-private</url>
-        <tag>JAHIA-8-2-3-X-BRANCH</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <repositories>
