--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -350,7 +350,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>legacy-default-components</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
