--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -146,7 +146,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>8.8.0</version>
+            <version>8.9.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
